// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DurationInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      />
      <div>
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <input
          autocomplete="off"
          class="input-root form-control number-input"
          data-testid="duration-input"
          name="value"
          placeholder="HH:MM:SS"
          required=""
          type="string"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DurationInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        Time on Page
      </div>
      <div>
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <input
          autocomplete="off"
          class="input-root form-control number-input"
          data-testid="duration-input"
          name="value"
          placeholder="HH:MM:SS"
          required=""
          type="string"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
